--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tanstack/react-query": "^5.62.7",
     "appwrite": "^16.0.2",
     "axios": "^1.7.9",
+    "dompurify": "^3.2.6",
     "firebase": "^11.8.1",
     "framer-motion": "^11.13.1",
     "i": "^0.3.7",
     "ldrs": "^1.0.2",
     "lucide-react": "^0.511.0",
+    "marked": "^16.0.0",
     "moment-timezone": "^0.5.46",
     "npm": "^10.9.2",
     "react": "^18.3.1",
